--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
     package="com.example.bwciptv">
     <uses-permission android:name="android.permission.INTERNET" /> 
    <application
-        android:label="bwciptv"
+        android:label="BWC IPTV"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
+            android:networkSecurityConfig="@xml/network_security_config"
+            android:usesCleartextTraffic="true"
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
