--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,14 @@ dependencies:
   lottie: ^1.3.0
   http: ^0.13.4
   provider: ^6.0.3
-  better_player: ^0.0.83
   jumping_dot: ^0.0.4
   shared_preferences: ^2.0.15
   file_picker: ^5.0.0
   flutter_vlc_player: ^7.1.5
   audio_video_progress_bar: ^0.10.0
+  fluttertoast: ^8.0.9
+  wakelock: ^0.6.2
+  persistent_bottom_nav_bar_v2: ^4.2.4
 
 dev_dependencies:
   flutter_test:
