--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bwciptv">
     <uses-permission android:name="android.permission.INTERNET" /> 
+    <uses-feature android:name="android.software.leanback"
+       android:required="false" />
+    <uses-feature android:name="android.hardware.touchscreen"
+        android:required="false" />
    <application
         android:label="BWC IPTV"
         android:name="${applicationName}"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
-        <activity
-            android:networkSecurityConfig="@xml/network_security_config"
-            android:usesCleartextTraffic="true"
+        <activity        
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
@@ -26,6 +29,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
