--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,7 +52,7 @@ android {
         abi {
          enable true
          reset()
-         include 'x86', 'x86_64', 'armeabi', 'armeabi-v7a', 'mips', 'mips64', 'arm64-v8a'
+         include 'x86'
          universalApk false
         }
     }
@@ -81,7 +81,10 @@ android {
     
     buildTypes {
         release {
-           signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
+            shrinkResources false
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
