--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,11 @@ dependencies:
   fluttertoast: ^8.0.9
   wakelock: ^0.6.2
   persistent_bottom_nav_bar_v2: ^4.2.4
-  better_player: ^0.0.83
   rename: ^2.0.1
   line_icons: ^2.0.1
+  flick_video_player: ^0.5.0
+  visibility_detector: ^0.3.3
+  m3u_nullsafe: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +59,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  m3u_nullsafe: ^1.0.4
+ 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
